# PersonalSite

./: README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile  schema.sql
backend/src/: db.rs  db_operations.rs  handlers.rs  main.rs  models.rs
frontend/: .dockerignore  Dockerfile  nginx.conf  notes.txt  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Navbar.css  Navbar.tsx  PostListItem.tsx
frontend/src/pages/: About.tsx  Blog.tsx  Post.tsx
frontend/src/types/: post.ts
notes/: frontend.txt  structure.txt
